# substreams-modules

./: Cargo.toml  rust-toolchain.toml
eosio.token/src/: maps.rs
setabi/: Cargo.toml  Makefile  README.md  substreams.yaml
setabi/proto/v1/: setabi.proto
setabi/src/: abi.rs  lib.rs  maps.rs
setabi/src/pb/: antelope.setabi.v1.rs
