[package]
name = "setabi"
version = "0.3.2"
authors = ["Yaro <yaro@pinax.network>", "Denis <denis@pinax.network>"]
description = "Ultra newly created setabi"
license = "MIT OR Apache-2.0"
edition = "2021"
publish = false

[badges]
maintenance = { status = "actively-developed" }

[lib]
crate-type = ["cdylib"]

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
substreams = { workspace = true }
substreams-antelope = { workspace = true }
serde_json = "1.0.91"
serde = { version = "1.0", features = ["derive"] }